# life_sim_ecosystem

./: Cargo.toml  README.md  config.toml  result.txt
.cargo/: config.toml
src/: agent.rs  config.rs  main.rs  render.rs  world.rs
