[package]
name = "life_sim_ecosystem"
version = "0.2.0"
edition = "2021"
authors = ["Igor Kramar"]
description = "Ecosystem simulation with herbivores and predators"

# Оптимизация для macroquad в dev-режиме
[profile.dev.package.'*']
opt-level = 3

[dependencies]
macroquad = "0.4.14"
rand = "0.10.0"
