[package]
name = "life_sim_ecosystem"
version = "0.0.2"
edition = "2021"
authors = ["Igor Kramar"]
description = "Ecosystem simulation with herbivores and predators"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
macroquad = "0.4.14"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
